syntax = "proto3";
package bib.common.v1;
option go_package = "github.com/bibbank/bib/api/gen/go/bib/common/v1;commonv1";
import "google/protobuf/timestamp.proto";

message AuditInfo {
  string created_by = 1;
  google.protobuf.Timestamp created_at = 2;
  string updated_by = 3;
  google.protobuf.Timestamp updated_at = 4;
  int32 version = 5;
}
